objects/Credentialing__c.object
<CustomObject>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credentialing</relationshipLabel>
        <relationshipName>Credentialing</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credentialing_Legacy_ID__c</fullName>
        <label>Credentialing Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credentialing_Status__c</fullName>
        <label>Credentialing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>In Progress- Change of Info</fullName>
                </value>
                <value>
                    <fullName>Re-Credentialing In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EFT_Status_Flag__c</fullName>
        <description>Green - Enrollment Complete
Yellow - In Progress</description>
        <formula>IMAGE(
CASE(  EFT_Status__c  ,
"Enrollment Complete" , "/img/samples/flag_green.gif",
"In Progress","/img/samples/flag_yellow.gif",
"/img/samples/s.gif"), "Status Flag")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Green - Enrollment Complete
Yellow - In Progress</inlineHelpText>
        <label>EFT Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFT_Status__c</fullName>
        <label>EFT Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enrollment Complete</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eligibility_Date__c</fullName>
        <label>Eligibility Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrolled_with_Zirmed__c</fullName>
        <label>Enrolled with Zirmed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Enrolled Directly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enrollment_Date__c</fullName>
        <label>Enrollment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Notice__c</fullName>
        <label>Expiration Notice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insurance_Type__c</fullName>
        <label>Insurance Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Workers Comp</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JIRA_Ticket__c</fullName>
        <label>JIRA Ticket</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Last_Contract_Date__c</fullName>
        <description>Last re-validation date or contract date, if applicable</description>
        <inlineHelpText>Last re-validation date or contract date, if applicable</inlineHelpText>
        <label>Last Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Medic_Data_Complete__c</fullName>
        <inlineHelpText>Is Medic data complete and accurate?</inlineHelpText>
        <label>Medic Data Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NPI__c</fullName>
        <label>NPI</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Basic_EMT_Medics__c</fullName>
        <label>Number of Basic EMT Medics</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_FF_PM_Medics__c</fullName>
        <label>Number of FF/PM Medics</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Payer__c</fullName>
        <description>If payer is not listed in the Payer Name picklist.</description>
        <inlineHelpText>Complete if the payer is not listed in the Payer Name picklist.</inlineHelpText>
        <label>Other Payer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PECOS_Credentials__c</fullName>
        <label>PECOS Credentials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PECOS_Enrolled__c</fullName>
        <label>PECOS Enrolled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PTAN_Provider__c</fullName>
        <label>PTAN/Provider #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer__c</fullName>
        <label>Payer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aetna</fullName>
                </value>
                <value>
                    <fullName>BCBS</fullName>
                </value>
                <value>
                    <fullName>CIGNA</fullName>
                </value>
                <value>
                    <fullName>GEHA</fullName>
                </value>
                <value>
                    <fullName>Geico</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pinnacle</fullName>
                </value>
                <value>
                    <fullName>Railroad</fullName>
                </value>
                <value>
                    <fullName>State License</fullName>
                </value>
                <value>
                    <fullName>Tricare</fullName>
                </value>
                <value>
                    <fullName>UHC</fullName>
                </value>
                <value>
                    <fullName>VA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Relations_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Relations Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Credentialing</relationshipLabel>
        <relationshipName>Credentialing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_License_on_File__c</fullName>
        <inlineHelpText>Required if Insurance Type is Medicaid</inlineHelpText>
        <label>State License on File</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Payer__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <inlineHelpText>Only required if payer is Medicaid</inlineHelpText>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Payer__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <label>Tax ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Data_Complete__c</fullName>
        <inlineHelpText>Is vehicle data complete and accurate?</inlineHelpText>
        <label>Vehicle Data Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zirmed_Eligible__c</fullName>
        <label>Zirmed Eligible</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>e_Claims_837_Status__c</fullName>
        <label>e-Claims (837) Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enrollment Complete</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>e_Claims_Status_Flag__c</fullName>
        <formula>IMAGE( 
CASE( e_Claims_837_Status__c    , 
    "Enrollment Complete" , "/img/samples/flag_green.gif", 
    "In Progress","/img/samples/flag_yellow.gif", 
    "/img/samples/s.gif"), "Status Flag")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Green - Enrollment Complete
Yellow - In Progress</inlineHelpText>
        <label>e-Claims Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>e_Remit_835_Status__c</fullName>
        <label>e-Remit (835) Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enrollment Complete</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>e_Remit_Status_Flag__c</fullName>
        <formula>IMAGE( 
CASE(e_Remit_835_Status__c   , 
    "Enrollment Complete" , "/img/samples/flag_green.gif", 
    "In Progress","/img/samples/flag_yellow.gif",
        "/img/samples/s.gif"), "Status Flag")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Green - Enrollment Complete
Yellow - In Progress</inlineHelpText>
        <label>e-Remit Status Flag</label>
        <type>Text</type>
    </fields>
    <label>Credentialing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Credentialing_Status__c</columns>
        <columns>Name__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{0}</displayFormat>
        <label>Credentialing Link</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credentialing</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>